objects/Partner_Function_Code_Mapping__mdt.object
<CustomObject>
    <description>This Custome metadata is created to maintain partner function code mapping between P23 and P80. This metadata type is created for CRM-2021-04-0192</description>
    <fields>
        <fullName>P23_Code__c</fullName>
        <description>It store the value of Partner function codes defined in P23 System</description>
        <label>P23 Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P23_Partner_Function__c</fullName>
        <label>P23 Partner Function</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P80_Code__c</fullName>
        <label>P80 Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P80_Partner_Function__c</fullName>
        <label>P80 Partner Function</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Partner Function Code Mapping</label>
    <pluralLabel>Partner Function Code Mapping</pluralLabel>
</CustomObject>